<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"

                android:layout_width="388dp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />
            <!--app:title="@string/app_name"-->

        </com.google.android.material.appbar.AppBarLayout>


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_columnSpan="4"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <!--    На экране помимо цифр должны быть все основные действия(набор-минимум: “Плюс”, “Умножить”,
                “Разделить”, “Вычесть”, “Равно” и “Очистить”).-->


            <!-- поле ввода чисел -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/numberField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:layout_span="4"
                    android:text="@string/number_default"
                    android:textSize="@dimen/number_text" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_clearAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_c"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_perc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_perc"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_clearLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_clear"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_divide"
                    android:textSize="@dimen/button_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_multiply"
                    android:textSize="@dimen/button_text" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_minus"
                    android:textSize="@dimen/button_text" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_plus"
                    android:textSize="@dimen/button_text" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/_0"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_point"
                    android:textSize="@dimen/button_text" />

                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_equals"
                    android:textSize="@dimen/button_text" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>


<!--
    button_dialog_fragment
    button_dialog_fragment_custom_view
    button_bottom_sheet_dialog_fragment-->
